<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editProfileLayout"
    tools:context=".EditProfile" >

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#00BCD4"
            android:gravity="center"
            android:layout_marginBottom="5dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="right"
                android:text="Profile"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />
            <Button
                android:id="@+id/signOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_edit_text"
                android:onClick="signInOrOutOnClickButton"
                android:text="Sign out" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:background="#F5F8F8"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/deleteProfile"
                android:layout_width="127dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/rounded_button_3"

                android:gravity="center"
                android:onClick="deleteProfile"
                android:padding="5dp"
                android:text="Delete Profile" />

            <Button
                android:id="@+id/myApplications"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_edit_text"
                android:onClick="gotToMyApplications"
                android:text="My Applications" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profileImage_E"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:onClick="profileImageOnClick"
                    app:srcCompat="@drawable/defaultavatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="283dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Enter Full Name" />

                    <EditText
                        android:id="@+id/editProfileName"
                        android:layout_width="284dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_edit_text"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/textViewProfileConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Enter Information About Yourself" />

                    <EditText
                        android:id="@+id/aboutMe_EditBox"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="@drawable/rounded_edit_text"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:padding="5dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/createProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="saveProfileChanges"
                        android:text="Save Changes" />

                    <Button
                        android:id="@+id/cancelProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="cancelEditProfile"
                        android:text="Cancel" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_button"
                        android:onClick="goToSubscription"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="Subscriptions"
                        android:textColor="#FFFFFF" />



                    <TextView
                        android:id="@+id/textViewEditProfileConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#302D2D" />

                    <TextView
                        android:id="@+id/textViewDeleteProfileConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#FF0000" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>